# Pasteboard

./: .gitignore  README.md  clipboard.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  db.rs  hotkey.rs  lib.rs  main.rs  paste.rs  settings.rs  state.rs  tray.rs  window.rs
ui/: app.js  index.html  styles.css
